# VMC-Project

./: .gitignore  CLAUDE.md  Context.md  DOCUMENTATION.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
public/: splashscreen.html
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: alerts.rs  audit.rs  auth.rs  checklists.rs  clients.rs  dashboard.rs  downtime.rs  integrity.rs  machines.rs  maintenance.rs  mod.rs  projects.rs  schedules.rs  shift_logs.rs  users.rs
src-tauri/src/db/: connection.rs  mod.rs  schema.rs  seed.rs
src-tauri/src/models/: alert.rs  audit.rs  client.rs  machine.rs  maintenance.rs  mod.rs  project.rs  schedule.rs  user.rs
src-tauri/src/utils/: auth.rs  permissions.rs
src/components/: AuditLog.tsx  Checklists.tsx  CostTab.tsx  Dashboard.tsx  DelayReasonModal.tsx  FloorView.tsx  Header.tsx  LoadingPopup.tsx  Login.tsx  Machines.tsx  Maintenance.tsx  Notifications.tsx  OperatorReport.tsx  Projects.tsx  Settings.tsx  ShiftHandover.tsx  Sidebar.tsx  WeeklyPlanner.tsx
src/components/common/: FormField.tsx  (+5 more)
src/context/: AuthContext.tsx  ToastContext.tsx
src/hooks/: index.ts  useAlerts.ts  useAuditLog.ts  useChecklists.ts  useClients.ts  useDashboard.ts  useDowntimeLog.ts  useFloorView.ts  useMachines.ts  useMaintenance.ts  usePagination.ts  useProjects.ts  useSchedules.ts  useShiftLogs.ts  useShiftTimeSync.ts  useTableState.ts
src/types/: index.ts
src/utils/: export.ts  validation.ts
