[package]
name = "app"
version = "0.1.0"
description = "VMC Planner - Machine Monitoring System"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.9.0", features = ["macos-private-api"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Authentication
bcrypt = "0.15"
uuid = { version = "1.7", features = ["v4"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["time", "macros", "sync"] }

# Logging
log = "0.4"

# Mutex for thread-safe database access
parking_lot = "0.12"
